<resources>
    <string name="app_name" translatable="false">Freebloks</string>
    <string name="copyright_string" translatable="false">Copyright (c) Sascha Hlusiak, 2012-2020.</string>
    <string name="new_local_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="join_game">Join</string>
    <string name="host_game">Host</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="join_multiplayer_game">Join multiplayer game</string>
    <string name="preferences">Settings</string>
    <string name="hint">Hint</string>
    <string name="undo">Undo</string>
    <string name="main_menu">Main Menu</string>
    <string name="about">About</string>
    <string name="about_freebloks">About Freebloks&#8230;</string>
    <string name="special_thanks_to">Special thanks to</string>
    <string name="connecting">Connecting to server&#8230;</string>
    <string name="connection_refused">Connection refused</string>
    <string name="could_not_restore_game">Could not restore game</string>
    <string name="do_you_want_to_leave_current_game">Are you sure you want to cancel the current game?</string>
    <string name="disconnect_error">Connection closed: %1$s. You are now offline.</string>
    <string name="server_address_hint">Server name or address</string>
    <string name="join_default_server">Internet</string>
    <string name="join_custom_server">Wireless LAN</string>
    <string name="join_bluetooth">Bluetooth</string>
    <string name="bluetooth_disabled">Bluetooth turned off or no devices paired</string>
    <string name="notification_channel_default" translatable="false">General</string>
    <string name="multiple_players">Multiple players</string>
    <string name="monomino">Monominos</string>
    <string name="domino">Dominos</string>
    <string name="tromino">Trominos</string>
    <string name="tetromino">Tetrominos</string>
    <string name="pentomino">Pentominos</string>
    <string name="waiting_for_color">Waiting for %1$s</string>
    <string name="color_is_out_of_moves">%1$s is out of moves</string>
    <plurals name="player_status_moves">
        <item quantity="one">%1$d move</item>
        <item quantity="other">%1$d moves</item>
    </plurals>
    <string name="touch_to_skip">touch to skip</string>
    <string name="no_player">no player</string>
    <string name="not_connected">not connected</string>
    <string name="your_turn">It\'s your turn, %1$s!</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="custom_game_title">Custom Game</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="statistics">Statistics</string>
    <string name="clear_statistics">Reset All</string>
    <string-array name="statistics_labels">
        <item>Games played</item>
        <item>Good games (+15)</item>
        <item>Perfect games (+20)</item>
        <item>1st place</item>
        <item>2nd place</item>
        <item>3rd place</item>
        <item>4th place</item>
        <item>Stones used</item>
        <item>Points total</item>
    </string-array>
    <string name="googleplus">Google Play Games</string>
    <string name="googleplus_signin">Sign in</string>
    <string name="googleplus_signin_long">Sign in to Google Play Games</string>
    <string name="googleplus_signout">Sign out</string>
    <string name="googleplus_signout_long">Signed in as %1$s</string>
    <string name="googleplus_leaderboard">Leaderboard</string>
    <string name="googleplus_leaderboard_long">Show the global leaderboard</string>
    <string name="googleplus_achievements">Achievements</string>
    <string name="googleplus_achievements_long">Show earned achievements</string>
    <string name="playgames_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="lobby_waiting_for_players">Waiting for players</string>
    <plurals name="connected_clients">
        <item quantity="one">%1$d client</item>
        <item quantity="other">%1$d clients</item>
    </plurals>
    <string name="chat">Chat</string>
    <string name="join_server_address">Server:</string>
    <string name="join_player_name">Your name:</string>
    <string name="client_d">Player %1$d</string>
    <string name="player_joined_color">%1$s is playing %2$s</string>
    <string name="player_left_color">%1$s (%2$s) has left</string>
    <string name="no_addresses_found">[no IP-address found]</string>
    <string name="lobby_message_hint">Type message</string>
    <string name="rate_now">Yes</string>
    <string name="rate_later">Later</string>
    <string name="rate_never">No</string>
    <string name="rate_freebloks_title">Rate Freebloks</string>
    <string name="rate_freebloks_text">If you enjoy Freebloks, would you like to take a minute and rate it?</string>
    <string name="rate_freebloks_donate_link"><u>Please support Freebloks</u></string>
    <plurals name="number_of_stones_left">
        <item quantity="one">%1$d stone left</item>
        <item quantity="other">%1$d stones left</item>
    </plurals>
    <plurals name="number_of_points">
        <item quantity="one">%1$d point</item>
        <item quantity="other">%1$d points</item>
    </plurals>
    <string-array name="places">
        <item>1st place</item>
        <item>2nd place</item>
        <item>3rd place</item>
        <item>4th place</item>
    </string-array>
    <string name="game_finished">Game Over</string>
    <string name="random_color">Random color</string>
    <string-array name="color_names">
        <item>White</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Red</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
    </string-array>
    <string-array name="difficulties">
        <item>nuts</item>
        <item>hard</item>
        <item>medium</item>
        <item>easy</item>
        <item>very easy</item>
    </string-array>
    <string-array name="game_modes">
        <item>2 Players, 2 Colors</item>
        <item>2 Players, 4 Colors</item>
        <item>Blokus Classic</item>
        <item>Blokus Duo</item>
        <item>Blokus Junior</item>
    </string-array>
    <string-array name="game_field_sizes">
        <item>13x13</item>
        <item>14x14</item>
        <item>15x15</item>
        <item>17x17</item>
        <item>20x20</item>
        <item>23x23</item>
    </string-array>
    <string name="please_donate">Support the development</string>
    <string name="donation_text_long">Freebloks is free software. You can use and modify it completely free of charge!\n\nBut that does not mean it has no value. That\'s why you can decide how much the game is worth to you and support the development of free software.</string>
    <string name="donation_text_short">What is Freebloks worth to you?</string>
    <string name="donation_nothing">Nothing</string>
    <string name="donation_next">Next</string>
    <string name="donation_freebloksvip">Freebloks VIP</string>
    <string name="donation_paypal">PayPal</string>
    <string name="advanced">Advanced</string>
    <string name="prefs_interface">Interface</string>
    <string name="prefs_display">Display</string>
    <string name="prefs_misc">Miscellaneous</string>
    <string name="prefs_sounds_long">Play sound effects</string>
    <string name="prefs_sounds">Sounds</string>
    <string name="prefs_vibrate_long">Vibrate when moving stones</string>
    <string name="prefs_vibrate">Vibrate</string>
    <string name="prefs_notifications_long">Show notifications in multiplayer games</string>
    <string name="prefs_notifications">Notifications</string>
    <string name="prefs_snap_to_corners_long">Help by snapping pieces to close valid positions</string>
    <string name="prefs_snap_to_corners">Snap to Corners</string>
    <string name="prefs_undo_long">Undo last move with back button</string>
    <string name="prefs_undo">Undo with Back</string>
    <string name="prefs_show_corners_long">Show possible corners of your stones</string>
    <string name="prefs_show_corners">Corners</string>
    <string name="prefs_show_opponents_long">Show opponents\' stones</string>
    <string name="prefs_show_opponents">Opponents</string>
    <string name="prefs_show_animations">Animations</string>
    <string name="prefs_skip_intro_long">Skip intro animation on app start</string>
    <string name="prefs_skip_intro">Skip Intro</string>
    <string name="prefs_auto_resume_long">Automatically resume last game</string>
    <string name="prefs_auto_resume">Auto-resume</string>
    <string name="prefs_rate_review_long">Please rate or leave a comment</string>
    <string name="prefs_rate_review">Freebloks in %1$s&#8230;</string>
    <string name="prefs_donation_long">Please support the development with a donation</string>
    <string name="prefs_donation">Support Freebloks&#8230;</string>
    <string name="prefs_donate">Donate</string>
    <string name="prefs_player_name">Player Name</string>
    <string name="prefs_player_name_default">[default]</string>
    <string name="prefs_theme">Background</string>
    <string name="prefs_statistics">Statistics</string>
    <string name="prefs_statistics_long">Show game statistics</string>
    <string name="blokus_duo">Blokus Duo</string>
    <string name="blokus_junior">Blokus Junior</string>
    <string name="rules_youtube">Watch HowTo Video</string>
    <string name="rules_how_to_play">How to play</string>
    <string name="rules_how_to_play_1">Swipe the list of pieces to find and select the piece you want to play, then drag it onto the board.</string>
    <string name="rules_how_to_play_2">Touch the handles on the side of the piece to move, rotate and flip it into position. Tap the piece to place it onto the board.</string>
    <string name="rules_blokus_classic">Blokus Classic</string>
    <string name="rules_classic_1">Each player starts with 21 unique pieces in his color. Turn by turn every player tries to place a piece onto the board. The player with the most pieces on the board wins the game.</string>
    <string name="rules_classic_2">The first piece of each color must be placed in one of the corners of the board.</string>
    <string name="rules_classic_3">Each new piece played must be placed so that it touches at least one piece of the same color, with only corner-to-corner contact allowed. Edges cannot touch. However, edge-to-edge contact is allowed with pieces of different colors.</string>
    <string name="rules_classic_4">When a player cannot place a piece, he or she passes, and play continues as normal. The game ends when no one can place a piece.</string>
    <string name="rules_variants">Two player variants</string>
    <string name="rules_variants_1">Two players usually play with either two colors each, or by leaving out two colors.</string>
    <string name="rules_scoring">Scoring</string>
    <string name="rules_scoring_1">At the end, all squares of each player\'s pieces on the board are added up (e.g. a \"pentomino\" is worth 5 points). If a player played all of their pieces, he gets a bonus score of +20 points if the last piece played was the single-square piece, +15 points otherwise.</string>
    <string name="rules_scoring_2">The maximum points a player can get in a game is therefore 89+20=109. The player with the highest score wins.</string>
    <string name="rules_duo_1">Blokus Duo is played by two players only on a much smaller board but with the same pieces as in Blokus Classic. The two starting squares are placed nearer to the centre.</string>
    <string name="rules_junior_1">Blokus Junior is targeted at younger children. Like Blokus Duo, it is played by two players on a 14×14 board but it uses only a subset of the pieces that have a simpler shape. There are 12 unique pieces, each player will get two of each kind.</string>
</resources>