<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_padding"
        android:orientation="vertical">

        <Button
            android:id="@+id/youtube"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/rules_youtube"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Rules_Paragraph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rules_classic_1" />

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/appicon_big"/>
        </LinearLayout>

        <TextView
            style="@style/Rules_Heading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_how_to_play" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/rules_2"/>

            <TextView
                style="@style/Rules_Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rules_how_to_play_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Rules_Paragraph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rules_how_to_play_2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:src="@drawable/rules_1"/>

        </LinearLayout>

        <TextView
            style="@style/Rules_Heading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_blokus_classic" />

        <TextView
            style="@style/Rules_Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_classic_2" />

        <TextView
            style="@style/Rules_Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_classic_3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/rules_3"/>

        <TextView
            style="@style/Rules_Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_classic_4" />

        <TextView
            style="@style/Rules_Heading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_variants" />

        <TextView
            style="@style/Rules_Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_variants_1" />

        <TextView
            style="@style/Rules_Heading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_scoring" />

        <TextView
            style="@style/Rules_Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_scoring_1" />

        <TextView
            style="@style/Rules_Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_scoring_2" />

        <TextView
            style="@style/Rules_Heading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blokus_duo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rules_4"/>

            <TextView
                style="@style/Rules_Paragraph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rules_duo_1"/>

        </LinearLayout>

        <TextView
            style="@style/Rules_Heading1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blokus_junior" />

        <TextView
            style="@style/Rules_Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_junior_1"/>

    </LinearLayout>

</ScrollView>